--- a/src/index.scss
+++ b/src/index.scss
@@ -16,7 +16,7 @@ body {
   position: relative;
   width: 500px;
   height: 300px;
-  background: #f1f1f1;
+  //background: #f1f1f1;
   margin: 100px auto 0;
   word-break: break-all;
   border: 1px solid rgba(0, 0, 0, 0.274);
