--- a/src/index.scss
+++ b/src/index.scss
@@ -15,7 +15,7 @@ body {
   flex-direction: column;
   position: relative;
   width: 500px;
-  height: 300px;
+  //height: 300px;
   //background: #f1f1f1;
   margin: 100px auto 0;
   word-break: break-all;
@@ -75,7 +75,7 @@ button {
   background: white;
   padding: 20px;
   width: 100%;
-  height: 100%;
+  //height: 100%;
   display: none;
 }
 
