--- a/src/index.scss
+++ b/src/index.scss
@@ -73,7 +73,7 @@ button {
 }
 .content {
   background: white;
-  padding: 20px;
+  //padding: 20px;
   width: 100%;
   //height: 100%;
   display: none;
