Background colour applied to the active tab

--- a/src/components/molecules/donation/donation.scss
+++ b/src/components/molecules/donation/donation.scss
@@ -18,7 +18,8 @@
   padding: 15px;
   text-align: center;
   width: 50%;
-  background: blue;
+  //width: 188px;
+  background: #003473;
   cursor: pointer;
   border-bottom: 1px solid rgba(0, 0, 0, 0.274);
   color: white;
