--- a/src/components/molecules/donation/donation.scss
+++ b/src/components/molecules/donation/donation.scss
@@ -1,73 +1,54 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  width: 500px;
-  //height: 300px;
-  //background: #f1f1f1;
-  margin: 100px auto 0;
-  word-break: break-all;
-  border: 1px solid rgba(0, 0, 0, 0.274);
-}
+.m-donations {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    width: 800px;   // Temporary
+    margin: 100px auto 0;   // Temporary - centres the panel on screen
 
-.bloc-tabs {
-  display: flex;
-}
-.tabs {
+    &__tabs-container {
+        display: flex;
+        flex-grow : 1;
+        position: relative;
+        top: 1px;
+    }
 
-  padding: 15px;
-  text-align: center;
-  width: 50%;
-  //width: 188px;
-  background: #003473;
-  cursor: pointer;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.274);
-  color: white;
-  box-sizing: content-box;
-  position: relative;
-  outline: none;
-}
-.tabs:not(:last-child){
-  border-right: 1px solid rgba(0, 0, 0, 0.274);
-}
+    &__tab {
+        padding: 15px;
+        text-align: center;
+        background-color: #003473;
+        color: #fff; 
+        cursor: pointer;
+        box-sizing: content-box;
+        position: relative;
+        outline: none;
+        margin-right: 5px;
+        border: none;
 
-.active-tabs  {
-  background: white;
-  color: blue;
-  border-bottom: 1px solid transparent;
-}
+        &--active {
+            background-color: #fff;
+            color: #003473;
+            border-top: 1px solid rgba(0, 0, 0, 0.274);
+            border-left: 1px solid rgba(0, 0, 0, 0.274);
+            border-right: 1px solid rgba(0, 0, 0, 0.274);
+            border-bottom: 1px solid transparent;
+        }
 
-/*
-.active-tabs::before {
-  content: "";
-  display: block;
-  position: absolute;
-  top: -5px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: calc(100% + 2px);
-  height: 5px;
-  background: rgb(88, 147, 241);
-}
-*/
+        &:not(:last-child) {
+            border-right: 1px solid rgba(0, 0, 0, 0.274);
+        }
+    }
 
+    &__inner {
+        border: 1px solid rgba(0, 0, 0, 0.274);
+    }
 
+    &__content {
+        background: white;
+        width: 100%;
+        display: none;
 
-button {
-  border: none;
-  
-}
-.content-tabs {
-  flex-grow : 1;
-}
-.content {
-  background: white;
-  //padding: 20px;
-  width: 100%;
-  //height: 100%;
-  display: none;
-}
-
-.active-content {
-  display: block;
+        &--active {
+            display: block;
+        }
+    }
 }
