--- a/src/components/molecules/donation/donation.scss
+++ b/src/components/molecules/donation/donation.scss
@@ -27,19 +27,22 @@
         &--active {
             background-color: #fff;
             color: #003473;
-            border-top: 1px solid rgba(0, 0, 0, 0.274);
-            border-left: 1px solid rgba(0, 0, 0, 0.274);
-            border-right: 1px solid rgba(0, 0, 0, 0.274);
+            border-top: 1px solid #B2B8C5;
+            border-left: 1px solid #B2B8C5;
+            border-right: 1px solid #B2B8C5;
             border-bottom: 1px solid transparent;
         }
 
         &:not(:last-child) {
-            border-right: 1px solid rgba(0, 0, 0, 0.274);
+            border-right: 1px solid #B2B8C5;
         }
     }
 
     &__inner {
-        border: 1px solid rgba(0, 0, 0, 0.274);
+        border-top: 1px solid #B2B8C5;
+        border-left: 1px solid #B2B8C5;
+        border-right: 1px solid #B2B8C5;
+        padding: 20px 15px;
     }
 
     &__content {
@@ -50,5 +53,17 @@
         &--active {
             display: block;
         }
+    }
+
+    &__form-group {
+        margin: 10px 0;
+    }
+
+    &__footer {
+        background-color: #eaedf4;
+        padding: 30px 15px;
+        border-bottom: 1px solid #B2B8C5;
+        border-left: 1px solid #B2B8C5;
+        border-right: 1px solid #B2B8C5;
     }
 }
