--- a/src/components/atoms/button/button.scss
+++ b/src/components/atoms/button/button.scss
@@ -4,7 +4,10 @@
 	text-align: center;
 	cursor: pointer;
 	font-weight: bold;
-	padding: 15px 35px;
+	padding: 15px 40px;
+	color: #1F2526;
+	line-height: 22px;
+	font-size: 20px;
 
 	&--active {
 		background-color: #189CA1;
