--- a/src/components/molecules/donation/donation.scss
+++ b/src/components/molecules/donation/donation.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    width: 1000px;   // Temporary
+    //width: 1000px;   // Temporary
     margin: 100px auto 0;   // Temporary - centres the panel on screen
 
     p {
