--- a/src/components/molecules/donation/donation.scss
+++ b/src/components/molecules/donation/donation.scss
@@ -90,6 +90,10 @@
             line-height: 18px;
             color: #4C4E53;
             letter-spacing: 0;
+
+            &--hidden {
+                display: none;
+            }
         }
     }
 }
