--- a/src/components/atoms/input/input.scss
+++ b/src/components/atoms/input/input.scss
@@ -1,3 +1,16 @@
 .a-input {
-	padding: 14px 5px;
+	padding: 16px 5px;
+	margin: 0 5px;
+	font-size: 15px;
+	position: relative;
+	top: -1px;
+}
+
+@media (max-width: 1024px) {
+  	.a-input {
+  		margin-top: 15px;
+  		margin-left: 0;
+  		margin-right: 0;
+    	width: 100%;
+  	}
 }
