--- a/src/styling/_reset.scss
+++ b/src/styling/_reset.scss
@@ -1,8 +1,6 @@
 html {
 	box-sizing: border-box;
 	font-size: 62.5%;
-	margin: 0;
-	padding: 0;
 	width: 100%;
 	height: 100%;
 }
@@ -19,7 +17,7 @@ html {
 body {
 	font-size: 16px;
 	font-size: 1.6rem;
-	margin: 0;
+	margin: 20px;
 	font-family: 'Open Sans';
 	color: #1F2526;
 }
