--- a/src/components/atoms/message/message.scss
+++ b/src/components/atoms/message/message.scss
@@ -1,6 +1,29 @@
 $message-color: #F69220;
 
 .a-message {
+	&-container {
+		width: 100%;
+		display: block;
+		position: relative;
+		top: -10px;
+	}
+
+	&-arrow {
+		width: 0; 
+		height: 0; 
+		border-left: 12px solid transparent;
+		border-right: 12px solid transparent;
+		border-bottom: 12px solid lighten($message-color, 20%);
+		position: relative;
+		top: 25px;
+		display: block;
+		margin: 0 auto;
+
+		@media (min-width: 1024px) {
+			left: 325px;
+		}
+	}
+
 	background-color: lighten($message-color, 20%);
 	color: #1F2526;
 	margin-top: 25px;
