Hide and Show images within the Donations component footer based on toggle

--- a/src/components/molecules/donation/donation.scss
+++ b/src/components/molecules/donation/donation.scss
@@ -103,5 +103,11 @@
                 display: none;
             }
         }
+
+        &-images {
+            &--hidden {
+                display: none;
+            }
+        }
     }
 }
